Fixed overflow in service calendars [#135878227]

--- a/app/assets/stylesheets/protocol_form.sass
+++ b/app/assets/stylesheets/protocol_form.sass
@@ -19,7 +19,7 @@
 /* TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.*/
 
 /* New/Edit Protocol */
-@media( min-width: 1200px )
+@media( min-width: 1300px )
   #funding-status, .pending_funding, #federal-non-phs, .approval_pending, #udak-number
     .col-lg-10
       padding-top: 11px
